[package]
name = "proc_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
]
